--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,7 @@
-[package]
-name = "bewbew"
-version = "0.1.0"
-edition = "2018"
+[workspace]
+resolver = "2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-hyper = { version = "0.14.7", features = ["full"] }
-tokio = { version = "1.5.0", features = ["full"] }
-tracing = "0.1.26"
-tracing-futures = "0.2.5"
-tracing-subscriber = "0.2.18"
+members = [
+    "bewbew",
+    "server_sdk"
+]
