--- a/keypair_maker/Cargo.toml
+++ b/keypair_maker/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "server_sdk"
+name = "keypair_maker"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
+argh = "0.1.6"
 ring = "0.16.20"
-serde = { version = "1.0.130", features = ["derive"] }
