--- a/server_sdk/Cargo.toml
+++ b/server_sdk/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 lazy_static = "1.4.0"
 ring = "0.16.20"
 serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.64"
