--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "keypair_maker"
+name = "store"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-argh = "0.1.6"
-ring = "0.16.20"
+bincode = "1.3.3"
+serde = { version = "1.0.130", features = ["derive"] }
+sled = "0.34.7"
+error = { path = "../error" }
