--- a/server_sdk/Cargo.toml
+++ b/server_sdk/Cargo.toml
@@ -10,3 +10,5 @@ bincode = "1.3.3"
 serde = { version = "1.0.130", features = ["derive"] }
 lazy_static = "1.4.0"
 ring = "0.16.20"
+error = { path = "../error" }
+store = { path = "../store" }
