--- a/bewbew/Cargo.toml
+++ b/bewbew/Cargo.toml
@@ -9,4 +9,7 @@ tokio = { version = "1.12.0", features = ["full"] }
 tracing = "0.1.29"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
+bincode = "1.3.3"
+serde = { version = "1.0.130", features = ["derive"] }
 server_sdk = { path = "../server_sdk" }
+error = { path = "../error" }
