--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.11.6"
-tokio = { version = "1.12.0", features = ["full"] }
+tokio = "1.13.0"
 bincode = "1.3.3"
 serde = { version = "1.0.130", features = ["derive"] }
 sdk = { path = "../sdk" }
