--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 reqwest = "0.11.6"
 tokio = "1.13.0"
-bincode = "1.3.3"
-serde = { version = "1.0.130", features = ["derive"] }
+#bincode = "1.3.3"
+#serde = { version = "1.0.130", features = ["derive"] }
 sdk = { path = "../sdk" }
 error = { path = "../error" }
+types = { path = "../types" }
