--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,7 +9,8 @@ tokio = { version = "1.13.0", features = ["rt-multi-thread"] }
 tracing = "0.1.29"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
-bincode = "1.3.3"
-serde = { version = "1.0.130", features = ["derive"] }
+#bincode = "1.3.3"
+#serde = { version = "1.0.130", features = ["derive"] }
 sdk = { path = "../sdk" }
 error = { path = "../error" }
+types = { path = "../types" }
