--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.3.3"
-serde = { version = "1.0.130", features = ["derive"] }
+#bincode = "1.3.3"
+#serde = { version = "1.0.130", features = ["derive"] }
 sled = "0.34.7"
 error = { path = "../error" }
+types = { path = "../types" }
