--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "sdk"
+name = "types"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ring = "0.16.20"
+bincode = "1.3.3"
+serde = { version = "1.0.130", features = ["derive"] }
 error = { path = "../error" }
-store = { path = "../store" }
-types = { path = "../types" }
