--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 [dependencies]
 reqwest = "0.11.6"
 tokio = "1.13.0"
-#bincode = "1.3.3"
-#serde = { version = "1.0.130", features = ["derive"] }
+serde = "1.0.130"
 sdk = { path = "../sdk" }
 error = { path = "../error" }
 types = { path = "../types" }
